# todorama-mcp-service

./: .gitignore  AGENTS.md  API.md  MCP_FUNCTION_GUIDE.md  MCP_TESTING.md  MCP_TOOL_CONSOLIDATION_REVIEW.md  PERFORMANCE.md  README.md  README_PARSER.md  REFACTORING_PLAN.md  TEST_FIX_PATTERN.md  analyze_agent_log.py  cursor-agent-loop-improved.sh  cursor-agent-loop.sh  docker-compose.production.yml  docker-compose.yml  host=localhost port=5432 dbname=conversations user=postgres  parse_cursor_agent.py  pyproject.toml  requirements.txt  run_checks.sh  setup.sh  test_parser.sh  verify_mcp_routing.py
.github/workflows/: docker-publish.yml
src/: Dockerfile  README.md  __init__.py  backup.py  conversation_backup.py  conversation_storage.py  database.py  docker-compose.yml  graphql_schema.py  main.py  main_refactored.py  mcp_api.py  monitoring.py  requirements.txt  tracing.py
src/adapters/: __init__.py  http_framework.py  job_queue_adapter.py  metrics.py  validation.py
src/api/: __init__.py  all_routes.py  command_router.py  response_strategy.py
src/app/: __init__.py  factory.py
src/auth/: __init__.py  dependencies.py
src/dependencies/: __init__.py  services.py
src/exceptions/: __init__.py  handlers.py
src/middleware/: __init__.py  logging_setup.py  setup.py
src/models/: __init__.py  comment_models.py  project_models.py  relationship_models.py  request_models.py  task_models.py
static/: app.js  index.html  organizations.html  roles.html  styles.css  teams.html  tenant-api.js
tests/: __init__.py  run_tests.sh  test_ab_testing.py  test_admin.py  test_api.py  test_api_consolidated.py  test_attachments.py  test_audio_conversion.py  test_backup.py  test_cli.py  test_conversation_backup.py  test_conversation_storage.py  test_cost_tracking.py  test_database.py  test_database_performance.py  test_e2e_agent_workflows.py  test_exceptions.py  test_github.py  test_graphql.py  test_integration.py  test_job_queue.py  test_mcp_api.py  test_multi_tenancy_integration.py  test_multi_tenancy_schema.py  test_nats_queue.py  test_needs_verification.py  test_organization_api.py  test_postgresql.py  test_rbac.py  test_routes_tasks.py  test_security_headers.py  test_slack.py  test_team_api.py  test_telegram.py  test_tenant_isolation.py  test_voice_commands.py  test_voice_quality.py  yaml_test_runner.py
todorama/: mcp_api.py
(+72 files in other folders)
